--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/clerk-react": "^5.2.5",
     "@edgestore/react": "^0.1.7",
     "@edgestore/server": "^0.1.7",
+    "@mantine/core": "^7.11.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -33,6 +34,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
