--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/clerk-react": "^5.2.5",
     "@edgestore/react": "^0.1.7",
     "@edgestore/server": "^0.1.7",
+    "@headlessui/react": "^2.1.2",
     "@mantine/core": "^7.11.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
