--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "cmdk": "^1.0.0",
     "convex": "^1.12.2",
     "emoji-picker-react": "^4.11.1",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -38,6 +38,7 @@
     "react-icons": "^5.2.1",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.12.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
