--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "convex": "^1.12.2",
     "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.3.30",
+    "google-map-react": "^2.2.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -36,6 +38,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.12.4",
